--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^7.2.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-paper": "^3.10.1",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
