--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-native-firebase/auth": "^8.0.4",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "json-server": "^0.16.1",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-banner-carousel": "^1.0.3",
+    "react-native-category": "^1.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.10.1",
